Fixed wrong positioning of help box

--- a/assets/style.css
+++ b/assets/style.css
@@ -368,7 +368,7 @@ code {
 }
 
 #help-section {
-  position: absolute;
+  position: fixed;
   display: flex;
   justify-content: center;
   align-items: center;
